--- a/src/Components/LandingPage.css
+++ b/src/Components/LandingPage.css
@@ -242,7 +242,7 @@ nav .menu-btn,
 .a-b-text a{
     margin-top:15px ;
 }
-#presentaion{
+#offer{
     padding-top: 30px;
     width:100%;
     height:768px;
