--- a/src/Components/LandingPage.css
+++ b/src/Components/LandingPage.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@300;400;700&display=swap');
 body{
     margin:0px;
     padding: 0px;
-    background-color: #000000;
-    font-family: 'Lato', sans-serif;
+    background-color: rgb(225,143,151);
+    font-family: 'Poppins', sans-serif;
 }
 *{
     box-sizing: border-box;
@@ -32,16 +31,16 @@ input{
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('../images/banner.png');
+    background-image: url('../images/banner.jpg');
     position: relative;
     z-index: 0;
 }
 #main::before{
     position: absolute;
     content: "";
-    background: -moz-radial-gradient(center, ellipse cover, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%);
-    background: -webkit-radial-gradient(center, ellipse cover, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%);
-    background: radial-gradient(ellipse at center, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%);
+    /* background: -moz-radial-gradient(center, ellipse cover, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%); */
+    /* background: -webkit-radial-gradient(center, ellipse cover, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%); */
+    /* background: radial-gradient(ellipse at center, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%); */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#61b50808', endColorstr='#99000000',GradientType=1 );
     top: 0;
     left: 0;
@@ -81,16 +80,16 @@ nav ul{
 	transition: all ease 0.2s;
 }
 nav ul li a{
-    font-family: 'Lato';
+    font-family: 'Poppins', sans-serif;
 	height:40px;
 	line-height: 43px;
 	margin: 3px;
 	padding: 0px 22px;
 	display: flex;
-	font-size: 0.9rem;
+	font-size: 1rem;
 	text-transform: uppercase;
-	font-weight: 500;
-	color:#ffffff;
+	font-weight: 800;
+	color:#fff;
     letter-spacing: 1px;
     border-radius: 3px;
     transition: 0.2s ease-in-out;
@@ -107,7 +106,7 @@ nav .menu-btn,
 	}
 .name{
     text-align: center;
-	font-family: 'Montserrat';
+	font-family: 'Poppins', sans-serif;
 	width: 900px;
 	position: absolute;
     left: 50%;
@@ -122,14 +121,14 @@ nav .menu-btn,
     color: #c5c5c5;
 }
 .name h2{
-	font-family:'Lato';
+	font-family: 'Poppins', sans-serif;
 	font-size: 2.7rem;
 	margin:0px;
 	letter-spacing: 2px;
 	color:#ffffff;
 }
 .name h1{
-	font-family:'Lato';
+	font-family: 'Poppins', sans-serif;
 	font-size: 5rem;
 	margin:0px;
 	letter-spacing: 2px;
@@ -163,13 +162,13 @@ nav .menu-btn,
     width:100%;
     height:120vh;
     box-sizing: border-box;
-    font-family:'Lato';
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding-top: 40px ;
-    background-color: #000000;
+    background-color: #EC969F;
 }
 #features h1{
     color: #fff;
@@ -183,7 +182,7 @@ nav .menu-btn,
 
 }
 .a-box{
-    background-color: #000000;
+    background-color: #fff;
     width:250px;
     height: 400px;
     margin: 20px;
@@ -193,9 +192,9 @@ nav .menu-btn,
     position: relative;
 }
 .a-b-img{
-    width: 100%;
-    height: 60%;
-
+    width: auto;
+    height: auto;
+    overflow: hidden;
 }
 .a-b-img img{
     padding: 15px;
@@ -205,13 +204,13 @@ nav .menu-btn,
 
 }
 .a-box:hover{
-    border: 1px solid #FF1414;
+    border: 3px solid #FF1414;
     box-shadow: 2px 2px 12px rgba(184, 0, 0, 0.445);
 }
 .a-b-text{
     width: 100%;
-    height: 40%;
-    background-color:#000000;
+    height: 20%;
+    background-color:#fff;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -219,13 +218,13 @@ nav .menu-btn,
     flex-direction: column;
 }
 .a-b-text h2{
-    color: #fff;
+    color: #FF1414;
 }
 .a-b-text p{
     margin: 0px;
     color:#ffffffa6;
     font-size: 1.1rem;
-    font-family:'Lato';
+    font-family: 'Poppins', sans-serif;
     display: block;
     display: -webkit-box;
     max-width: 80%;
@@ -249,17 +248,17 @@ nav .menu-btn,
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(../images/offer.png);
+    background-image: url(../images/offer.jpg);
     text-align: center;
 }
 
 .pr-heading{
-    text-align: center;
-	font-family:'Lato';
+    text-align: left;
+	font-family: 'Poppins', sans-serif;
 	width: 600px;
 	position: absolute;
-    left: 50%;
-	top: 55%;
+    left: 30%;
+	top: 60%;
 	transform: translate(-50%,-55%);
 }
 .pr-heading span{
@@ -273,7 +272,7 @@ nav .menu-btn,
     font-size: 1.2rem;
 }
 .pr-heading h1{
-	font-family:'Lato';
+	font-family: 'Poppins', sans-serif;
 	font-size: 4rem;
 	margin:0px;
 	letter-spacing: 2px;
@@ -282,7 +281,7 @@ nav .menu-btn,
 .pr-btns{
     display: flex;
     margin-top: 40px;
-    margin-left: 35%;
+    /* margin-left: 10%; */
 }
 .pr-btn{
 	width:160px;
@@ -351,9 +350,14 @@ nav .menu-btn,
 }
 .about-image{
     width: 50%;
+    border-color: #ffffff!important;
+    border-width: 2px!important;
 }
 .about-image img{
   width: 600px;
+  border-radius: 15px;
+  
+  
 }
 
 #contact{
@@ -455,6 +459,9 @@ nav .menu-btn,
     
     
 
+}
+.p{
+    color: white!important;
 }
 
 @media(max-width:970px){
