--- a/src/Components/LandingPage.css
+++ b/src/Components/LandingPage.css
@@ -460,9 +460,9 @@ nav .menu-btn,
     
 
 }
-.p{
+/* .about-text.about-heading{
     color: white!important;
-}
+} */
 
 @media(max-width:970px){
 	#main{
